--- a/my-profile/package.json
+++ b/my-profile/package.json
@@ -5,6 +5,6 @@
     "build": "cd backend && npm install && npm run build && cd ../frontend && npm install && npm run build"
   },
   "engines": {
-    "node": "20.x"
+    "node": ">=18.x"
   }
 }
