--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,8 @@
 {
   "version": 2,
-  "buildCommand": "cd my-profile && npm run build",
+  "buildCommand": "cd my-profile/frontend && npm install && npm run build",
   "outputDirectory": "my-profile/frontend/dist",
-  "functions": {
-    "my-profile/backend/api/*.ts": {
-      "runtime": "@vercel/node@3.0.0"
-    }
-  },
   "rewrites": [
-    { "source": "/api/:path*", "destination": "/my-profile/backend/api/index.ts" },
-    { "source": "/(.*)", "destination": "/index.html" }
+    { "source": "/((?!api).*)", "destination": "/index.html" }
   ]
 }
